# SimpleObjects

./: CMakeLists.txt  README.md
.github/workflows/: unit-tests.yaml
docs/: classes_layout.drawio
include/: CMakeLists.txt
include/SimpleObjects/: BaseObject.hpp  BaseObjectImpl.hpp  BasicDefs.hpp  Bytes.hpp  BytesBaseObject.hpp  CMakeLists.txt  Compare.hpp  CompareRealNum.hpp  ConstSequence.hpp  DefaultTypes.hpp  Dict.hpp  DictBaseObject.hpp  Endianness.hpp  Exception.hpp  HashableBaseObject.hpp  HashableObject.hpp  Iterator.hpp  IteratorIf.hpp  IteratorStdCpp.hpp  IteratorZip.hpp  List.hpp  ListBaseObject.hpp  Null.hpp  Numeric.hpp  NumericBaseObject.hpp  NumericTypeInfer.hpp  Object.hpp  PrimitiveCmp.hpp  RealNum.hpp  RealNumBaseObject.hpp  RealNumCast.hpp  RealNumTraits.hpp  SimpleObjects.hpp  StaticDict.hpp  StaticDictBaseObject.hpp  String.hpp  StringBaseObject.hpp  ToString.hpp  ToStringImpl.hpp  Utils.hpp
include/SimpleObjects/Codec/: Base64.hpp  Base64DecodeImpl.hpp  Base64DecodeUtils.hpp  Base64EncodeImpl.hpp  Base64EncodeUtils.hpp  Base64Utils.hpp  Hex.hpp  HexDecodeImpl.hpp  HexDecodeUtils.hpp  HexEncodeImpl.hpp  HexEncodeUtils.hpp  HexUtils.hpp
include/SimpleObjects/Internal/: DictKey.hpp  IteratorTransform.hpp  hash.hpp  rj_common.hpp  rj_diyfp.hpp  rj_dtoa.hpp  rj_ieee754.hpp
test/: CMakeLists.txt  TestCoverage.cmake
test/src/: CompareHelpers.hpp  Main.cpp  TestBaseObjects.cpp  TestBytes.cpp  TestCodecBase64.cpp  TestCodecHex.cpp  TestConstSequence.cpp  TestD2A.cpp  TestDict.cpp  TestEndianness.cpp  TestHashableObject.cpp  TestIterator.cpp  TestList.cpp  TestNull.cpp  TestNumeric.cpp  TestNumericTypeInfer.cpp  TestObject.cpp  TestRealNum.cpp  TestRealNumTypeInfer.cpp  TestStaticDict.cpp  TestString.cpp  TestUtils.cpp
